# stealthlib

./: .clang-tidy  .gitignore  .gitlab-ci.yml  AUDIT_REPORT.md  AUDIT_v2.1.2.md  AUDIT_v2.1.2_DEEP_FINDINGS.md  AUDIT_v2.1.3_RESPONSE.md  CMakeLists.txt  LICENSE  PROJECT_PLAN.md  README.md  bitbucket-pipelines.yml  build_project.cmd  compile.bat  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml  coverity.yml  heavy-ci.yml  macos.yml  nightly-fuzz.yml  sonarcloud.yml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: stealthlib-config.cmake.in
docs/: ANALYSIS.md  AUDIT_REPORT.html  EXAMPLES.md  HARDENING_REPORT.md  INSTALL.md  SECURITY.md  THREADING.md  THREAT_MODEL.md
examples/: CMakeLists.txt  full_demo.cpp  game_protection.cpp  hash_resolution.cpp  minimal_test.cpp  server_protection.cpp  unlock_demo.cpp
scripts/: check_github_description.py
src/: compile.bat
stealthlib/: stealth.hpp  stealth_encode.hpp  stealth_iat.hpp  stealth_peb.hpp  stealth_strings.hpp
stealthlib/detail/: encryption.hpp  guards.hpp  hashes.hpp  secure_string.hpp  sha256.hpp  version.hpp
stealthlib/detection/: debug.hpp  signals.hpp
stealthlib/encoding/: encoding.hpp
stealthlib/integrity/: integrity.hpp
stealthlib/memory/: memory.hpp
stealthlib/pe/: pe_layout.hpp  pe_parser.hpp
stealthlib/vmdetect/: vmdetect.hpp
tests/: CMakeLists.txt  binary_scan.cmake  binary_scan_target.cpp  comprehensive_test.cpp  fuzz_decoders.cpp  fuzz_hashes.cpp  fuzz_strings.cpp  integration_test.cpp  peb_test.cpp  portable_smoke_test.cpp  regression_test.cpp  regression_tu_a.cpp  regression_tu_b.cpp  scenario_rte_libc_walk.cpp  scenario_rte_signal_sweep.cpp  scenario_rte_stress.cpp  string_test.cpp  test_concurrent_decrypt.cpp  test_deterministic_concurrency.cpp  test_hashes.cpp  test_hwbp.cpp  test_integrity.cpp  test_peb_windows.cpp  test_sha256.cpp  test_sse2_parity.cpp  test_strings.cpp
tests/differential/: diff_test_stealth.cpp  diff_test_xorstr.cpp  run_diff_test.sh
tests/fixtures/: generate_pe.py
tools/: mutation_test.sh  quickverify.sh
